<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congrat"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dowell"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10sp">


        <Button
            android:id="@+id/buttonno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/continue1"
            android:textColor="@color/white" />
    <Button
        android:id="@+id/buttonOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="closeapp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/close"
        android:textColor="@color/white" />

</LinearLayout>

    </LinearLayout>

</LinearLayout>