<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fav_black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/ad_view_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.github.barteksc.pdfviewer.PDFView>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/bookmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/notification"
        android:src="@drawable/ic_bookmark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/fav_black"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/list_dropp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/color_icon_list_share"
            android:ellipsize="end"
            android:fontFamily="@font/fonts"
            android:maxLines="1"
            android:onClick="gotoFurther"
            android:text="@string/is"
            android:textColor="@drawable/btn_press" />

        <Button
            android:id="@+id/btn_agzaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/color_icon_goza"
            android:ellipsize="end"
            android:fontFamily="@font/fonts"
            android:maxLines="1"
            android:onClick="go_toagza"
            android:text="@string/marks"
            android:textColor="@drawable/btn_press" />

        <Button
            android:id="@+id/btn_fhress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/color_icon_fahres"
            android:ellipsize="end"
            android:fontFamily="@font/fonts"
            android:maxLines="1"
            android:text="@string/fhares"
            android:textColor="@drawable/btn_press" />

        <Button
            android:id="@+id/btn_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/color_icon_mark2"
            android:ellipsize="end"
            android:fontFamily="@font/fonts"
            android:maxLines="1"
            android:onClick="go_toagza"
            android:text="@string/add"
            android:textColor="@drawable/btn_press" />

        <Button
            android:id="@+id/markss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/bookmark_2"
            android:ellipsize="end"
            android:fontFamily="@font/fonts"
            android:maxLines="1"
            android:text="@string/mark"
            android:textColor="@drawable/btn_press" />

    </LinearLayout>

    <com.ihyas.adlib.AdBannerView
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>